--- a/package.json
+++ b/package.json
@@ -3,6 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Maxim Golev",
+  "scripts": {
+    "lint": "npx eslint src/**/*.ts"
+  },
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/express": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "globals": "^15.11.0",
+    "typescript-eslint": "^8.10.0"
+  },
+  "dependencies": {
+    "express": "^4.21.1",
+    "latest": "^0.2.0"
+  },
+  "lint": {}
 }
